--- a/src/pddl_interface/CMakeLists.txt
+++ b/src/pddl_interface/CMakeLists.txt
@@ -7,7 +7,6 @@ add_library(pddl_py_interface)
 list(APPEND EXTRA_LIBS lapkt_shared)
 target_include_directories(pddl_py_interface PRIVATE ${Python3_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
 target_link_libraries( pddl_py_interface PRIVATE
-    ${PYTHON_LIBRARIES}
     ${EXTRA_LIBS} 
     ${Boost_LIBRARIES}
     )
@@ -25,12 +24,12 @@ add_subdirectory(common)
 #
 install(
     TARGETS pddl_py_interface 
-    DESTINATION lib/interface
+    DESTINATION lib/lapkt/interface
     COMPONENT Runtime 
     )
 install(
     TARGETS pddl_py_interface 
-    DESTINATION lib/interface
+    DESTINATION lib/lapkt/interface
     COMPONENT Development EXCLUDE_FROM_ALL
     EXPORT LAPKTTargets
     )
@@ -38,12 +37,12 @@ install(
 file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/__init__.py "from .libpddl_py_interface import *")
 install(
     FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/interface
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/lapkt/interface
     COMPONENT Runtime
     )
 install(
     FILES ${CMAKE_CURRENT_BINARY_DIR}/__init__.py
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/interface
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/lapkt/interface
     COMPONENT Development EXCLUDE_FROM_ALL
     )
 
