--- a/src/planners/bfws/planner_config.yml
+++ b/src/planners/bfws/planner_config.yml
@@ -57,6 +57,7 @@ BFWS:
     var_name: 'search'
   anytime: 
     cmd_arg: 
+      default : False
       required: False
       action  : 'store_true'
       help    : 'enable anytime planning'
