--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -11,7 +11,19 @@ install(FILES
     DESTINATION ${CMAKE_INSTALL_PREFIX}
     COMPONENT Development EXCLUDE_FROM_ALL
   )
-
+#
+install(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/gringo
+    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+    COMPONENT Runtime
+  )
+install(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/gringo
+    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
+    COMPONENT Development EXCLUDE_FROM_ALL
+  )
 #
 if(CMAKE_VAL)
     install(FILES
