--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -1,24 +1,26 @@
 #
 install(FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
+    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt.py
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     DESTINATION ${CMAKE_INSTALL_PREFIX}
     COMPONENT Runtime
   )
 install(FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
+    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt.py
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     DESTINATION ${CMAKE_INSTALL_PREFIX}
     COMPONENT Development EXCLUDE_FROM_ALL
   )
 #
 install(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
     ${CMAKE_CURRENT_SOURCE_DIR}/gringo
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
     COMPONENT Runtime
   )
 install(FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/lapkt
     ${CMAKE_CURRENT_SOURCE_DIR}/gringo
     PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ
     DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
