Bug fixed Tarski - instanstiate actions with 'True' pre-condition

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             //"stopOnEntry": true,
             "pythonPath": "/usr/bin/python3",
-            "program": "${workspaceRoot}/release/lapkt",
-            "args": ["BFWS", "-d", "${workspaceRoot}/tests/sample_instance/domain.pddl", 
-                "-p", "${workspaceRoot}/tests/sample_instance/problem.pddl", "--wait_debug"],
+            "program": "${workspaceRoot}/release/lapkt.py",
+            "args": ["AT_LAPKT_Planner", "-d", "${workspaceRoot}/lab_experiment_module/classical_fixed/movie/domain.pddl", 
+                "-p", "${workspaceRoot}/lab_experiment_module/classical_fixed/movie/prob01.pddl", "--wait_debug"],
             //"cwd": "${workspaceFolder}",
         },
         { 
