Added customTag for Doxygen VSCode extension file description comment block. Updated the build guide with cmake configurations for doxygen and sphinx-exhale

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,18 @@
     "C_Cpp.default.cppStandard": "c++17",
     "doxdocgen.generic.authorEmail": "anubhav.singh.er@protonmail.com",
     "doxdocgen.generic.authorName": "Anubhav Singh",
-    "doxdocgen.file.customTag": ["<Some additional text which you want to include along with file comments>"]
+    "doxdocgen.file.customTag": [
+    "This program is free software: you can redistribute it and/or modify",
+    "it under the terms of the GNU General Public License as published by",
+    "the Free Software Foundation, either version 3 of the License, or",
+    "(at your option) any later version.",
+    "",
+    "This program is distributed in the hope that it will be useful,",
+    "but WITHOUT ANY WARRANTY; without even the implied warranty of",
+    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the",
+    "GNU General Public License for more details.",
+    "",
+    "You should have received a copy of the GNU General Public License",
+    "along with this program.  If not, see <http://www.gnu.org/licenses/>.",
+    ]
 }
