--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external_package/VAL-4.2.08"]
 	path = external_package/VAL-4.2.08
 	url = https://github.com/LAPKT-dev/VAL-4.2.08.git
+[submodule "external_package/Catch2"]
+	path = external_package/Catch2
+	url = https://github.com/catchorg/Catch2.git
