--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,6 @@
         "-DCMAKE_DOXYGEN_AWESOME_THEME=ON",
         "-DCMAKE_SPHINX_DOCS=OFF"
     ],
-    "cmake.parallelJobs": 4,
     "files.associations": {
         "*.ipp": "cpp",
         "cctype": "cpp",
@@ -64,20 +63,24 @@
         "numbers": "cpp"
     },
     "C_Cpp.default.cppStandard": "c++17",
-    "doxdocgen.generic.authorEmail": "anubhav.singh.er@protonmail.com",
-    "doxdocgen.generic.authorName": "Anubhav Singh",
-    "doxdocgen.file.customTag": [
-    "This program is free software: you can redistribute it and/or modify",
-    "it under the terms of the GNU General Public License as published by",
-    "the Free Software Foundation, either version 3 of the License, or",
-    "(at your option) any later version.",
-    "",
-    "This program is distributed in the hope that it will be useful,",
-    "but WITHOUT ANY WARRANTY; without even the implied warranty of",
-    "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the",
-    "GNU General Public License for more details.",
-    "",
-    "You should have received a copy of the GNU General Public License",
-    "along with this program.  If not, see <http://www.gnu.org/licenses/>.",
-    ]
+    // **** The following configurations should be added to you "User" settings
+    // **** User setting locations: 
+    //      https://code.visualstudio.com/docs/getstarted/settings#_settings-file-locations
+    //
+    // "doxdocgen.generic.authorEmail": "<Your email>",
+    // "doxdocgen.generic.authorName": "<Your Name>",
+    // "doxdocgen.file.customTag": [
+    // "This program is free software: you can redistribute it and/or modify",
+    // "it under the terms of the GNU General Public License as published by",
+    // "the Free Software Foundation, either version 3 of the License, or",
+    // "(at your option) any later version.",
+    // "",
+    // "This program is distributed in the hope that it will be useful,",
+    // "but WITHOUT ANY WARRANTY; without even the implied warranty of",
+    // "MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the",
+    // "GNU General Public License for more details.",
+    // "",
+    // "You should have received a copy of the GNU General Public License",
+    // "along with this program.  If not, see <http://www.gnu.org/licenses/>."
+    // ]
 }
