--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "lab_experiment_module"]
 	path = lab_experiment_module
     url = https://github.com/LAPKT-dev/lab_experiment_module.git
-[submodule "external_package/fd"]
-	path = external_package/fd
-	url = https://github.com/LAPKT-dev/fd_translate.git
-[submodule "external_package/libff"]
-	path = external_package/libff
-	url = https://github.com/LAPKT-dev/libff_parser.git
-[submodule "external_package/VAL-4.2.08"]
-	path = external_package/VAL-4.2.08
-	url = https://github.com/LAPKT-dev/VAL-4.2.08.git
 [submodule "external_package/Catch2"]
 	path = external_package/Catch2
 	url = https://github.com/catchorg/Catch2.git
+[submodule "fd_translate"]
+	path = external_package/fd_translate
+	url = https://github.com/LAPKT-dev/fd_translate.git
+[submodule "external_package/libff"]
+	path = external_package/libff
+	url = https://github.com/LAPKT-dev/libff_parser
+[submodule "external_package/VAL-4.2.08"]
+	path = external_package/VAL-4.2.08
+	url = https://github.com/LAPKT-dev/VAL-4.2.08
