Switch off FF, FD and VAL variables in cmake. We don't want them in the default build.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,10 @@
     "git.ignoreLimitWarning": true,
     "cmake.configureOnOpen": true,
     "cmake.configureArgs": [
-        "-DCMAKE_FF=ON", "-DCMAKE_FD=ON", "-DCMAKE_VAL=ON", 
-        "-DCMAKE_DOXYGEN_DOCS=OFF", 
-        "-DCMAKE_DOXYGEN_FLAT_THEME=ON",
-        "-DCMAKE_DOXYGEN_AWESOME_THEME=ON",
+        "-DCMAKE_FF=OFF", "-DCMAKE_FD=OFF", "-DCMAKE_VAL=OFF", 
+        "-DCMAKE_DOXYGEN_DOCS=ON", 
+        "-DCMAKE_DOXYGEN_FLAT_THEME=OFF",
+        "-DCMAKE_DOXYGEN_AWESOME_THEME=OFF",
         "-DCMAKE_SPHINX_DOCS=OFF"
     ],
     "files.associations": {
